--- a/public/index.html
+++ b/public/index.html
@@ -63,5 +63,6 @@
 <!-- Load the JS SDK asynchronously -->
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 <h5>head 5</h5>
+<h5>head 5</h5>
 </body>
 </html>
